# mjolnir

./: 2  CONTRIBUTING.md  Cargo.toml  README.md  test_stdlib.sh
.github/workflows/: rust.yml
docs/: intrinsics.md
docs/backend/: ast_interpreter.md
docs/frontend/: types.md
docs/lang/: generics.md  types.md
etc/nvim/ftdetect/: mjolnir.vim
etc/nvim/syntax/: Mjolnir.vim
examples/: io.mjl  list.mjl  list_int.mjl  modules1.mjl  modules2.mjl  print.mjl  sort.mjl
src/: ast.rs  backend.rs  constants.rs  frontend.rs  grammar.lalrpop  location.rs  main.rs  parser.rs  traits.rs
src/ast/: display.rs  pretty_print.rs
src/backend/: ast_interpreter.rs
src/backend/ast_interpreter/: ast_interpreter.rs  interpreter.rs  native_functions.rs
src/frontend/: error.rs  parser.rs  semantic_analysis.rs  type_analysis.rs  type_ast.rs  type_inference.rs  types.rs  utils.rs
stdlib/: io.mjl  list.mjl  math.mjl  option.mjl  result.mjl  string.mjl
stdlib_tests/: list_test.mjl  string_test.mjl
